# helsinki-city-bikes-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yaml
db/: repository.py
db/data/: stations.csv
db/migrations/: 1_create_tables.up.sql  1_tables.down.sql  20240507_create_users_table.up.sql  2_down.sql  2_up.sql
postgres/: add_data_to_db.py  database.py  db.py  models.py  setup_db.py
postgres/seeds/: fill_db.py  setup_db.py
src/: main.py  models.py  run.py  schemas.py
src/app/: app.py  schemas.py  settings.py
src/app/api/stations/: dependencies.py  models.py  router.py  schemas.py  servises.py
src/app/api/trips/: models.py  schemas.py
src/app/repositories/postgres/seeds/: setup_db.py
src/app/stations/: dependencies.py  models.py  router.py  routers.py  schemas.py  servises.py
src/app/trips/: models.py  schemas.py
src/postgres/: models.py  repository.py
src/postgres/seeds/: fill_db.py  setup_db.py
tests/: test_main.py
tests/unit/: test_get_station_by_id.py  test_get_stations_names.py
tests/validations/: test_lat_lon_validations.py
