[tool.poetry]
name = "helsinki-city-bikes-api"
version = "0.1.0"
description = "API Helsinki City Bikes Database"
authors = ["Ilia Munaev <ilyamunaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
ruff = "^0.4.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
black = "^24.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
